@@ -21,6 +21,7 @@ sub _init {
 sub _render {
    my ($self, $args)   = @_;
 
+   $args->{class }  .= q( ifield);
    $args->{labels}   = $self->labels   if ($self->labels);
    $args->{onchange} = $self->onchange if ($self->onchange);
    $args->{values}   = $self->values;
